--- a/index.html
+++ b/index.html
@@ -4,10 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blackjack</title>
+
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   <link rel="stylesheet" href="assets/css/styles.css">
+
 </head>
 <body>
   
+  <header class="titulo">
+    Blackjack
+  </header>
+
+  <div class="row mt-2">
+    <div class="col text-center">
+      <button class="btn btn-danger">Nuevo Juego</button>
+      <button class="btn btn-primary">Pedir Carta</button>
+      <button class="btn btn-primary">Detener</button>
+    </div>
+  </div>
+
+  <div class="row container">
+    <div class="col">
+      <h1>Jugador 1 <small>0</small></h1>
+      <div id="judador-cartas" class="judador-cartas">
+        <img class="carta" src="assets/cartas/10C.png" alt="carta">
+      </div>
+    </div>
+  </div>
+
+  <div class="row container mt-2">
+    <div class="col">
+      <h1>Computadora <small>0</small></h1>
+      <div id="computadora-cartas" class="computadora-cartas">
+        <img class="carta" src="assets/cartas/8C.png" alt="carta">
+      </div>
+    </div>
+  </div>
 
   <script src="assets/js/juego.js"></script>
 </body>
