Evento pedir una carta

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   </header>
 
   <div class="row mt-2">
-    <div class="col text-center">
-      <button class="btn btn-danger">Nuevo Juego</button>
-      <button class="btn btn-primary">Pedir Carta</button>
-      <button class="btn btn-primary">Detener</button>
+    <div id="btn-container" class="col text-center">
+      <button id="btn-new-game" class="btn btn-danger">Nuevo Juego</button>
+      <button id="btn-request-card" class="btn btn-primary">Pedir Carta</button>
+      <button id="btn-stop-game" class="btn btn-primary">Detener</button>
     </div>
   </div>
 
